--- a/public/html/badgelist.html
+++ b/public/html/badgelist.html
@@ -2,17 +2,21 @@
 <html ng-app="storyApp">
 	<head>
 		<meta charset="utf-8">
+		<link href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.5/css/bootstrap.css" rel="stylesheet" type="text/css">
+		<link href="/css/styles.css" rel="stylesheet" type="text/css">
 		<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.7/angular.min.js"></script>
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.4.7/angular-route.min.js"></script>
 		<script src="/js/main.js"></script>
 		<script src="/js/badgefactory.js"></script>
 	</head>
 	<body ng-controller="mainController">
-		<h1>Badges</h1>
-		<div ng-repeat="badge in badges">
-			<h2>{{badge.name}}</h2>
-			<div>{{badge.description}}</div>
-			<img ng-src="{{badge.image}}">
+		<div class="container row">
+			<h1>Badges</h1>
+			<div class="badge col-lg-2 col-md-3 col-sm-4 col-xs-6" ng-repeat="badge in badges">
+				<h2>{{badge.name}}</h2>
+				<div>{{badge.description}}</div>
+				<img ng-src="{{badge.image}}">
+			</div>
 		</div>
 	</body>
 </html>
