set up paramaterized routes for user profiles

--- a/public/html/index.html
+++ b/public/html/index.html
@@ -10,7 +10,7 @@
 	</head>
 	<body>
 		<h1>Story Scouts</h1>
-		<button type="button">Sign Up</button>
+		<button type="button"><a href="/#/signup">Sign Up</a></button>
 		<form method="POST" action="auth/login">
 			<b>Username:</b>
 			<input type="text">
@@ -24,6 +24,12 @@
 			<li><a href="/#/faqs">FAQs</a></li>
 			<li><a href="/#/about">About</a></li>
 			<li><a href="/#/contact">Contact</a></li>
+		</ul>
+		<ul>
+			<li><b>The following routes will ultimately be for logged in users...</b></li>
+			<li><a href="/#/browse">Browse</a></li>
+			<li><a href="/#/profile">Profile</a></li>
+			<li><a href="/#/submit">Submit</a></li>
 		</ul>
 		<div ng-view>
 		</div>
