--- a/public/html/private/browse.html
+++ b/public/html/private/browse.html
@@ -1,3 +1,5 @@
+<h1>Here is the place for a logged in user to browse users, stories, poems, and essays...</h1>
+
 <div ng-repeat="user in users">
 </div>
 
