set up parameterized hash routes

--- a/public/html/index.html
+++ b/public/html/index.html
@@ -7,6 +7,7 @@
 		<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.7/angular.min.js"></script>
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.4.7/angular-route.min.js"></script>
 		<script src="/js/main.js"></script>
+		<script src="/js/badgefactory.js"></script>
 	</head>
 	<body>
 		<h1>Story Scouts</h1>
@@ -28,7 +29,7 @@
 		<ul>
 			<li><b>The following routes will ultimately be for logged in users...</b></li>
 			<li><a href="/#/browse">Browse</a></li>
-			<li><a href="/#/profile">Profile</a></li>
+			<li><a href="/#/profile/paulanator">Profile</a></li>
 			<li><a href="/#/submit">Submit</a></li>
 		</ul>
 		<div ng-view>
