--- a/public/html/private/browse.html
+++ b/public/html/private/browse.html
@@ -1,14 +1,16 @@
-<h1>Here is the place for a logged in user to browse users, stories, poems, and essays...</h1>
+<div class="view">
+	<h1>Here is the place for a logged in user to browse users, stories, poems, and essays...</h1>
 
-<div ng-repeat="user in users">
-</div>
+	<div ng-repeat="user in users">
+	</div>
 
 
-<div ng-repeat="story in stories">
-</div>
+	<div ng-repeat="story in stories">
+	</div>
 
-<div ng-repeat="poem in poems">
-</div>
+	<div ng-repeat="poem in poems">
+	</div>
 
-<div ng-repeat="essay in essays">
+	<div ng-repeat="essay in essays">
+	</div>
 </div>
