--- a/public/html/private/profile.html
+++ b/public/html/private/profile.html
@@ -1,4 +1,4 @@
-<div ng-repeat="user in users">
+<div class="view" ng-repeat="user in users">
 	<h1>{{user.username}}</h1>
 	<p>{{user.bio}}</p>
 	<span>{{user.age}} years old - born {{user.birthday}}</span>
