--- a/public/html/public/guidelines.html
+++ b/public/html/public/guidelines.html
@@ -1,2 +1,4 @@
-<h1>Submission Guideliness</h1>
-<p>This page will contain information about what content is allowed in stories, poems, and essays, and which users are allowed to see and submit mature-rated content.</p>
+<div class="view">
+	<h1>Submission Guideliness</h1>
+	<p>This page will contain information about what content is allowed in stories, poems, and essays, and which users are allowed to see and submit mature-rated content.</p>
+</div>
