--- a/public/html/public/login.html
+++ b/public/html/public/login.html
@@ -1,7 +1,9 @@
-<form method="POST" action="auth/login">
-	<b>Username:</b>
-	<input type="text">
-	<b>Password:</b>
-	<input type="text">
-	<input type="submit" value="Log In">
-</form>
+<div class="view">
+	<form method="POST" action="auth/login">
+		<b>Username:</b>
+		<input type="text">
+		<b>Password:</b>
+		<input type="text">
+		<input type="submit" value="Log In">
+	</form>
+</div>
