--- a/public/html/public/about.html
+++ b/public/html/public/about.html
@@ -1,2 +1,4 @@
-<h1>About</h1>
-<p>This page will contain information about the web developer and the site's creation and goals.</p>
+<div class="view">
+	<h1>About</h1>
+	<p>This page will contain information about the web developer and the site's creation and goals.</p>
+</div>
