--- a/public/html/public/contact.html
+++ b/public/html/public/contact.html
@@ -1,2 +1,4 @@
-<h1>Contact</h1>
-<p>This page will contain a form to contact the site admins with concerns or questions.</p>
+<div class="view">
+	<h1>Contact</h1>
+	<p>This page will contain a form to contact the site admins with concerns or questions.</p>
+</div>
