--- a/public/html/public/faqs.html
+++ b/public/html/public/faqs.html
@@ -1,2 +1,4 @@
-<h1>Frequently-Asked Questions</h1>
-<p>This page will contain a list of questions and answers parents, kids, and teachers have about the site.</p>
+<div class="view">
+	<h1>Frequently-Asked Questions</h1>
+	<p>This page will contain a list of questions and answers parents, kids, and teachers have about the site.</p>
+</div>
