--- a/public/html/public/intro.html
+++ b/public/html/public/intro.html
@@ -1,2 +1,4 @@
-<h1>Home</h1>
-<p>This is what everyone will see when they view the site, regardless of whether they are logged in.</p>
+<div class="view">
+	<h1>Home</h1>
+	<p>This is what everyone will see when they view the site, regardless of whether they are logged in.</p>
+</div>
