--- a/public/html/badgelist.html
+++ b/public/html/badgelist.html
@@ -5,8 +5,8 @@
 		<link href="/css/styles.css" rel="stylesheet" type="text/css">
 		<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.7/angular.min.js"></script>
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.4.7/angular-route.min.js"></script>
-		<script src="/js/main.js"></script>
-		<script src="/js/badgefactory.js"></script>
+		<script src="../js/main.js"></script>
+		<script src="../js/badgefactory.js"></script>
 	</head>
 	<body ng-controller="mainController">
 		<div class="container row">
