--- a/public/html/index.html
+++ b/public/html/index.html
@@ -7,10 +7,11 @@
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.4.7/angular-route.min.js"></script>
 		<script src="/js/main.js"></script>
 		<script src="/js/badgefactory.js"></script>
+
 	</head>
 	<body>
 		<div class="static-header">
-			<h1>Story Scouts</h1>
+			<h1>Writing Rangers</h1>
 			<form method="POST" action="auth/login">
 				<b>Username:</b>
 				<input type="text">
