--- a/public/html/private/submission.html
+++ b/public/html/private/submission.html
@@ -14,7 +14,7 @@
 		<div>
 			{{submission.content}}
 		</div>
-		<h2>Comments</h2>
+<!-- 		<h2>Comments</h2>
 		<div ng-repeat="comment in submission.comments">
 			<h3>{{comment.username}}</h3>
 			<div><b>{{comment.date}}</b></div>
@@ -25,5 +25,27 @@
 		<div>Let the author know what you think!</div>
 		<input type="textarea" placeholder="Add a comment..." name="comment">
 		<input type="submit">
-	</form>
+	</form> -->
+	<div id="disqus_thread"></div>
+	<script>
+	    /**
+	     *  RECOMMENDED CONFIGURATION VARIABLES: EDIT AND UNCOMMENT THE SECTION BELOW TO INSERT DYNAMIC VALUES FROM YOUR PLATFORM OR CMS.
+	     *  LEARN WHY DEFINING THESE VARIABLES IS IMPORTANT: https://disqus.com/admin/universalcode/#configuration-variables
+	     */
+	    /*
+	    var disqus_config = function () {
+	        this.page.url = PAGE_URL;  // Replace PAGE_URL with your page's canonical URL variable
+	        this.page.identifier = PAGE_IDENTIFIER; // Replace PAGE_IDENTIFIER with your page's unique identifier variable
+	    };
+	    */
+	    (function() {  // DON'T EDIT BELOW THIS LINE
+	        var d = document, s = d.createElement('script');
+	        
+	        s.src = '//writingrangers.disqus.com/embed.js';
+	        
+	        s.setAttribute('data-timestamp', +new Date());
+	        (d.head || d.body).appendChild(s);
+	    })();
+	</script>
+	<noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript" rel="nofollow">comments powered by Disqus.</a></noscript>
 </div>
