--- a/public/html/private/profile.html
+++ b/public/html/private/profile.html
@@ -22,17 +22,17 @@
 		</div>
 	<h2>Submissions</h2>
 	<h3>Stories</h3>
-		<div ng-repeat="story in user.stories">
+		<div ng-repeat="story in stories[0]">
 			<h4>{{story.title}}</h4>
 			<p>{{story.description}}</p>
 		</div>
 	<h3>Essays</h3>
-		<div ng-repeat="essay in user.essays">
+		<div ng-repeat="essay in essays[0]">
 			<h4>{{essay.title}}</h4>
 			<p>{{essay.description}}</p>
 		</div>
 	<h3>Poems</h3>
-		<div ng-repeat="poem in user.poems">
+		<div ng-repeat="poem in poems[0]">
 			<h4>{{poem.title}}</h4>
 			<p>{{poem.description}}</p>
 		</div>
