login seems to be working

--- a/public/html/index.html
+++ b/public/html/index.html
@@ -13,9 +13,9 @@
 			<h1>Writing Rangers</h1>
 			<form method="POST" action="auth/login">
 				<b>Username:</b>
-				<input type="text">
+				<input name="username" type="text">
 				<b>Password:</b>
-				<input type="text">
+				<input type="text" name="password">
 				<input type="submit" value="Log In">
 			</form>
 			<ul class="nav">
