--- a/public/html/private/submissionform.html
+++ b/public/html/private/submissionform.html
@@ -1,6 +1,6 @@
 <div class="view">
 	<h1>Submission Form</h1>
-	<form method="POST" action="api/submission">
+	<form method="POST" action="/api/submission">
 		<div>Title</div>
 		<input type="text" name="title" placeholder="title...">
 		<div>Type</div>
