--- a/public/html/index.html
+++ b/public/html/index.html
@@ -31,6 +31,9 @@
 			<li><a href="/#/browse">Browse</a></li>
 			<li><a href="/#/profile/paulanator">Profile</a></li>
 			<li><a href="/#/submit">Submit</a></li>
+			<li><form method="GET" action="auth/logout">
+				<input type="submit" value="Log Out">
+			</form></li>
 		</ul>
 		<div ng-view>
 		</div>
