--- a/public/html/private/browse.html
+++ b/public/html/private/browse.html
@@ -1,6 +1,5 @@
 <div class="view">
-	<h1>Here is the place for a logged in user to browse users, stories, poems, and essays...</h1>
-
+	<h1>Browse</h1>
 	<h2>Users</h2>
 	<div ng-repeat="user in users[0]">
 	<a ng-href="/#/profile/{{user.username}}">{{user.username}}</a>
