--- a/public/html/index.html
+++ b/public/html/index.html
@@ -3,7 +3,8 @@
 	<head>
 		<meta charset="utf-8">
 		<link href="/css/styles.css" rel="stylesheet" type="text/css">
-<link href='https://fonts.googleapis.com/css?family=Patrick+Hand' rel='stylesheet' type='text/css'>
+		<link href='https://fonts.googleapis.com/css?family=Patrick+Hand' rel='stylesheet' type='text/css'>
+		<link href='https://fonts.googleapis.com/css?family=Lato' rel='stylesheet' type='text/css'>
 		<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.7/angular.min.js"></script>
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.4.7/angular-route.min.js"></script>
 		<script src="/js/main.js"></script>
@@ -15,7 +16,7 @@
 			<form method="POST" action="auth/login">
 				<input name="username" type="text" placeholder="username...">
 				<input type="text" name="password" placeholder="password...">
-				<button type="submit">log in</button>
+				<button class="button" type="submit">log in</button>
 			</form>
 		</div>
 		<ul class="nav main-nav">
