--- a/public/html/public/intro.html
+++ b/public/html/public/intro.html
@@ -1,4 +1,4 @@
 <div class="view">
-	<h1>Home</h1>
-	<p>This is what everyone will see when they view the site, regardless of whether they are logged in.</p>
+	<h1>Welcome to the Writing Rangers!</h1>
+	<p>This is a fun, friendly place for children of all ages to share and improve their writing. Collect badges by submitting your work and offering critiques and compliments to others! Sound fun? <a href="/#/signup">Sign up!</a></p>
 </div>
