--- a/public/html/public/newuser.html
+++ b/public/html/public/newuser.html
@@ -14,12 +14,11 @@
 		<div>When is your birthday?</div>
 		<input type="text" name="birthday" placeholder="xx/xx/xxxx...">
 		<div>Tell us a little bit about yourself! If you'd like to think it over, you can fill this out later.</div>
-		<input type="text" name="bio" placeholder="Tell us about yourself!">
+		<textarea class="medium-area" name="bio" placeholder="Tell us about yourself!"></textarea>
 		<div>What are some of your favorite books? Enter a comma and space separated list, for example: <span><b>the Alchemist, Speak, Pride and Prejudice, the Maze Runner</b></span> You can fill this out later.</div>
-		<input type="text" name="favBooks" placeholder="Favorite books...">
+		<textarea class="small-area" placeholder="Favorite books..." name="favBooks"></textarea>
 		<div>Who are some of your favorite authors? Enter a comma and space separated list, for example: <span><b>Laurie Halse Anderson, Stephen King, Markus Zusak</b></span> You can fill this out later.</div>
-		<input type="text" name="favWriters" placeholder="Favorite writers...">
-		<div>Get ready to write!</div>
-		<input type="submit" value="Sign Up">
+		<textarea class="small-area" placeholder="Favorite writers..." name="favWriters"></textarea>
+		<button class="button form-button" type="submit">sign up</button>
 	</form>
 </div>
