hid password input, set up route to logged in user's page

--- a/public/html/index.html
+++ b/public/html/index.html
@@ -15,7 +15,7 @@
 			<h1>Writing Rangers &#9788;</h1>
 			<form method="POST" action="auth/login">
 				<input name="username" type="text" placeholder="username...">
-				<input type="text" name="password" placeholder="password...">
+				<input type="password" name="password" placeholder="password...">
 				<button class="button" type="submit">log in</button>
 			</form>
 		</div>
@@ -24,7 +24,7 @@
 			 <span style="font-size: 0.8rem;">&#9650;</span>
 			<li><a href="/#/browse">browse</a></li>
 			 <span style="font-size: 0.8rem;">&#9650;</span>
-			<li><a href="/#/profile/paulanator">profile</a></li>
+			<li><a href="/#/profile">profile</a></li>
 			<span style="font-size: 0.8rem;">&#9650;</span>
 			<li><a href="/#/submit">submit</a></li>
 			 <span style="font-size: 0.8rem;">&#9650;</span>
