--- a/public/html/public/newuser.html
+++ b/public/html/public/newuser.html
@@ -4,9 +4,7 @@
 		<div>Choose a username! Do not use your full name.</div>
 		<input type="text" name="username" placeholder="username...">
 		<div>Enter a password.</div>
-		<input type="text" name="password" placeholder="password...">
-		<div>Re-enter your password.</div>
-		<input type="text" name="verifypassword" placeholder="re-enter password...">
+		<input type="password" name="password" placeholder="password...">
 		<div>What is your e-mail address? This will be kept private, and will only be used to send you relevant information about your account and the site.</div>
 		<input type="text" name="email" placeholder="e-mail...">
 		<div>How old are you? New users must be under 18 or able to verify that they are high school students.</div>
