--- a/public/html/private/submissionform.html
+++ b/public/html/private/submissionform.html
@@ -27,7 +27,7 @@
 			<input type="radio" name="matureContent" value="true">
 			<span>Yes, it does.</span>
 		</div>
-		<h3>Share your writing below!</h3>
+		<h3>Share your writing below! Type [p] wherever you would like to insert a line break.</h3>
 		<textarea class="large-area" name="content" placeholder="Your writing goes here!"></textarea>
 		<input class="button form-button" type="submit" value="submit">
 	</form>
