incremented comments, minor style changes

--- a/public/html/private/profile.html
+++ b/public/html/private/profile.html
@@ -13,6 +13,7 @@
 		<li><b>Poems: </b>{{user.numPoems}}</li>
 		<li><b>Essays: </b>{{user.numEssays}}</li>
 		<li><b>Total submissions: </b>{{user.numSubmissions}}</li>
+		<li><b>Total comments: </b>{{user.numComments}}</li>
 	</ul>
 	<h2>Badges</h2>
 		<div class="badge col-lg-2 col-md-3 col-sm-4 col-xs-6" ng-repeat="badge in user.badges">
