comment system in progress

--- a/public/html/public/intro.html
+++ b/public/html/public/intro.html
@@ -1,4 +1,5 @@
 <div class="view">
 	<h1>Welcome to the Writing Rangers!</h1>
+	<p>Hello, friends! Update has been completed. Comments are still broken. Make sure to only use numbers and no other characters for the age and birthday fields when you register. But the submission counts are working and essays and stories should be properly formatted. Yay!</p>
 	<p>This is a fun, friendly place for children of all ages to share and improve their writing. Collect badges by submitting your work and offering critiques and compliments to others! Sound fun? <a href="/#/signup">Sign up!</a></p>
 </div>
