--- a/public/html/private/submission.html
+++ b/public/html/private/submission.html
@@ -22,12 +22,12 @@
 		</div>
 		<hr>
 		<h2>Comments</h2>
-		<form method="POST" action="/api/comment">
+		<form ng-submit="submitComment()">
 			<div>Let the author know what you think!</div><br>
-			<textarea class="medium-area" placeholder="Add a comment..." name="comment"></textarea>
+			<textarea class="medium-area" placeholder="Add a comment..." ng-model="$parent.comment"></textarea>
 			<input class="button form-button" type="submit">
 		</form>
-		<div ng-repeat="comment in submission.comments">
+		<div ng-repeat="comment in comments">
 			<h3>{{comment.username}}</h3>
 			<div><b>{{comment.date}}</b></div>
 			<div>{{comment.comment}}</div>
