--- a/public/html/public/newuser.html
+++ b/public/html/public/newuser.html
@@ -1,15 +1,15 @@
 <div class="view">
-	<h1>Become a Story Scout</h1>
+	<h1>Register</h1>
 	<form method="POST" action="auth/signup">
 		<div>Choose a username! Do not use your full name.</div>
 		<input type="text" name="username" placeholder="username...">
 		<div>Enter a password.</div>
 		<input type="password" name="password" placeholder="password...">
-		<div>What is your e-mail address? This will be kept private, and will only be used to send you relevant information about your account and the site.</div>
+		<div>What is your e-mail address? This will be kept private, and will only be used to send you relevant information about your account and the site. <span style="color: red; font-size: 0.8rem;">Required!</span></div>
 		<input type="text" name="email" placeholder="e-mail...">
-		<div>How old are you? New users must be under 18 or able to verify that they are high school students.</div>
+		<div>How old are you? New users must be under 18 or able to verify that they are high school students. <span style="color: red; font-size: 0.8rem;">Required!</span></div>
 		<input type="text" name="age" placeholder="age...">
-		<div>When is your birthday?</div>
+		<div>When is your birthday? <span style="color: red; font-size: 0.8rem;">Required!</span></div>
 		<input type="text" name="birthday" placeholder="xx/xx/xxxx...">
 		<div>Tell us a little bit about yourself! If you'd like to think it over, you can fill this out later.</div>
 		<textarea class="medium-area" name="bio" placeholder="Tell us about yourself!"></textarea>
