comment properly appearing on submissions

--- a/public/html/private/submission.html
+++ b/public/html/private/submission.html
@@ -22,7 +22,7 @@
 		<textarea class="medium-area" placeholder="Add a comment..." ng-model="$parent.comment"></textarea>
 		<input class="button form-button" type="submit">
 	</form>
-	<div ng-repeat="comment in comments">
+	<div ng-repeat="comment in comments[0]">
 		<h3>{{comment.username}}</h3>
 		<div><b>{{comment.date}}</b></div>
 		<div>{{comment.comment}}</div>
