function done except badges, need to style

--- a/public/html/index.html
+++ b/public/html/index.html
@@ -3,8 +3,6 @@
 	<head>
 		<meta charset="utf-8">
 		<link href="/css/styles.css" rel="stylesheet" type="text/css">
-		<link href='https://fonts.googleapis.com/css?family=Patrick+Hand' rel='stylesheet' type='text/css'>
-		<link href='https://fonts.googleapis.com/css?family=Lato' rel='stylesheet' type='text/css'>
 		<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.7/angular.min.js"></script>
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.4.7/angular-route.min.js"></script>
 		<script src="/js/main.js"></script>
@@ -12,7 +10,7 @@
 	</head>
 	<body>
 		<div class="static-header">
-			<h1>Writing Rangers &#9788;</h1>
+			<h1>Just Write &#9788;</h1>
 			<form method="POST" action="auth/login">
 				<input name="username" type="text" placeholder="username...">
 				<input type="password" name="password" placeholder="password...">
