--- a/public/html/public/intro.html
+++ b/public/html/public/intro.html
@@ -1,5 +1,26 @@
 <div class="view">
-	<h1>Welcome to the Writing Rangers!</h1>
-	<p>Hello, friends! Update has been completed. Comments are still broken. Make sure to only use numbers and no other characters for the age and birthday fields when you register. But the submission counts are working and essays and stories should be properly formatted. Yay!</p>
-	<p>This is a fun, friendly place for children of all ages to share and improve their writing. Collect badges by submitting your work and offering critiques and compliments to others! Sound fun? <a href="/#/signup">Sign up!</a></p>
+	<div class="box main-box">
+		<h1>Welcome to Just Write!</h1>
+		<p>This is a writing site. Obviously. Hopefully I come up with something better to say about it soon...</p>
+		<div class="dummy-container">
+			<button type="button"><a href="/#/signup">Sign Up!</a></button>
+		</div>
+	</div>
+	<div class="centering-container">
+		<div class="box tip-box">
+			<h2>Fun</h2>
+			<img src="/images/beehive.jpg">
+			<p>Earn colorful, nature-themed badges when you submit writing.</p>
+		</div>
+		<div class="box tip-box">
+			<h2>Focused</h2>
+			<img src="/images/branchingout.jpg">
+			<p>This site is all about writing, simple to use with none of the clutter of social media sites.</p>
+		</div>
+		<div class="box tip-box">
+			<h2>Friendly</h2>
+			<img src="/images/pack.jpg">
+			<p>Community-themed badges reward you for commenting on others' work.</p>
+		</div>
+	</div>
 </div>
