--- a/public/html/public/newuser.html
+++ b/public/html/public/newuser.html
@@ -7,7 +7,7 @@
 		<input type="password" name="password" placeholder="password...">
 		<div>What is your e-mail address? This will be kept private, and will only be used to send you relevant information about your account and the site. <span style="color: red; font-size: 0.8rem;">Required!</span></div>
 		<input type="text" name="email" placeholder="e-mail...">
-		<div>How old are you? New users must be under 18 or able to verify that they are high school students. <span style="color: red; font-size: 0.8rem;">Required!</span></div>
+		<div>How old are you? <span style="color: red; font-size: 0.8rem;">Required!</span></div>
 		<input type="text" name="age" placeholder="age...">
 		<div>When is your birthday? <span style="color: red; font-size: 0.8rem;">Required!</span></div>
 		<input type="text" name="birthday" placeholder="xx/xx/xxxx...">
