login toggles navbar visibility, began bootstrap design

--- a/public/html/private/submissionform.html
+++ b/public/html/private/submissionform.html
@@ -20,6 +20,6 @@
 		<textarea class="medium-area" name="description"></textarea>
 		<h3>Share your writing below! Type a [p] wherever you would like to insert a line break.<span style="color: red; font-size: 0.8rem;">Required!</span></h3>
 		<textarea class="large-area" name="content" placeholder="Your writing goes here!"></textarea>
-		<input class="button form-button" type="submit" value="submit">
+		<input class="btn btn-default" type="submit" value="submit">
 	</form>
 </div>
