--- a/public/html/public/intro.html
+++ b/public/html/public/intro.html
@@ -1,23 +1,23 @@
-<div class="view">
-	<div class="box main-box">
+<div class="view" class="container">
+	<div class="box main-box row">
 		<h1>Welcome to Just Write!</h1>
 		<p>This is a writing site. Obviously. Hopefully I come up with something better to say about it soon...</p>
 		<div class="dummy-container">
-			<button type="button"><a href="/#/signup">Sign Up!</a></button>
+			<button class="btn btn-default" type="button"><a href="/#/signup">Sign Up!</a></button>
 		</div>
 	</div>
-	<div class="centering-container">
-		<div class="box tip-box">
+	<div class="centering-container row">
+		<div class="col-lg-4 col-md-4 col-sm-4 col-xs-12">
 			<h2>Fun</h2>
 			<img src="/images/beehive.jpg">
 			<p>Earn colorful, nature-themed badges when you submit writing.</p>
 		</div>
-		<div class="box tip-box">
+		<div class="col-lg-4 col-md-4 col-sm-4 col-xs-12">
 			<h2>Focused</h2>
 			<img src="/images/branchingout.jpg">
 			<p>This site is all about writing, simple to use with none of the clutter of social media sites.</p>
 		</div>
-		<div class="box tip-box">
+		<div class="col-lg-4 col-md-4 col-sm-4 col-xs-12">
 			<h2>Friendly</h2>
 			<img src="/images/pack.jpg">
 			<p>Community-themed badges reward you for commenting on others' work.</p>
