--- a/public/html/index.html
+++ b/public/html/index.html
@@ -2,34 +2,39 @@
 <html ng-app="storyApp">
 	<head>
 		<meta charset="utf-8">
+		<link href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.5/css/bootstrap.css" rel="stylesheet" type="text/css">
+		<link href='https://fonts.googleapis.com/css?family=Khula:400,700|Shadows+Into+Light' rel='stylesheet' type='text/css'>
 		<link href="/css/styles.css" rel="stylesheet" type="text/css">
 		<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.7/angular.min.js"></script>
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.4.7/angular-route.min.js"></script>
 		<script src="/js/main.js"></script>
 		<script src="/js/badgefactory.js"></script>
 	</head>
-	<body>
-		<div class="static-header">
-			<h1>Just Write &#9788;</h1>
-			<form method="POST" action="auth/login">
-				<input name="username" type="text" placeholder="username...">
-				<input type="password" name="password" placeholder="password...">
-				<button class="button" type="submit">log in</button>
-			</form>
+	<body ng-controller="mainController">
+		<div class="container">
+			<div class="row">
+				<h1 class="col-xs-12 title text-center">Just Write</h1>
+			</div>
 		</div>
-		<ul class="nav main-nav">
-			<li><a href="/#/">home</a></li>
-			 <span style="font-size: 0.8rem;">&#9650;</span>
-			<li><a href="/#/browse">browse</a></li>
-			 <span style="font-size: 0.8rem;">&#9650;</span>
-			<li><a href="/#/profile">profile</a></li>
-			<span style="font-size: 0.8rem;">&#9650;</span>
-			<li><a href="/#/submit">submit</a></li>
-			 <span style="font-size: 0.8rem;">&#9650;</span>
-			<li><a href="/#/signup">sign up</a></li>
-			 <span style="font-size: 0.8rem;">&#9650;</span>
-			<li><a href="/auth/logout">log out</a></li>
+		<ul ng-show="loggedIn" class="view container text-center nav-list">
+			<li><a class="btn btn-default" href="/#/">home</a></li>
+			 <span style="font-size: 0.8rem;"></span>
+			<li><a class="btn btn-default" href="/#/browse">browse</a></li>
+			 <span style="font-size: 0.8rem;"></span>
+			<li><a class="btn btn-default" href="/#/profile">profile</a></li>
+			<span style="font-size: 0.8rem;"></span>
+			<li><a class="btn btn-default" href="/#/submit">submit</a></li>
+			 <span style="font-size: 0.8rem;"></span>
+			<li><a class="btn btn-default" href="/#/signup">sign up</a></li>
+			 <span style="font-size: 0.8rem;"></span>
+			<li><a class="btn btn-default" href="/auth/logout">log out</a></li>
 		</ul>
+		<form ng-hide="loggedIn" class="view login-form" method="POST" action="auth/login">
+			<input name="username" type="text" placeholder="username...">
+			<input type="password" name="password" placeholder="password...">
+			<input class="btn-default btn" type="submit">
+		</form>
+		<br>
 		<div ng-view>
 		</div>
 	</body>
