--- a/public/html/private/submission.html
+++ b/public/html/private/submission.html
@@ -20,7 +20,7 @@
 	<form ng-submit="submitComment()">
 		<div>Let the author know what you think!</div><br>
 		<textarea class="medium-area" placeholder="Add a comment..." ng-model="$parent.comment"></textarea>
-		<input class="button form-button" type="submit">
+		<input class="btn btn-default" type="submit">
 	</form>
 	<div ng-repeat="comment in comments[0]">
 		<h3>{{comment.username}}</h3>
