--- a/public/html/public/intro.html
+++ b/public/html/public/intro.html
@@ -1,4 +1,4 @@
-<div class="view" class="container">
+<div class="view intro-page" class="container">
 	<div class="box main-box row">
 		<h1>Welcome to Just Write!</h1>
 		<p>This is a writing site. Obviously. Hopefully I come up with something better to say about it soon...</p>
